update product image

--- a/public/products.html
+++ b/public/products.html
@@ -162,12 +162,12 @@
                     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 tab-content">
                         <div class="practice-left-content tab-pane fade in active" id="Criminal">
                             <div class="fix practice-left-top-img">
-                                <div class="fix practice-left-top-left-img">
-                                    <img src="img/practice-top-1.jpg" alt="">
+                                <div class="products-full-width">
+                                    <img src="img/products/polyester2.png" alt="">
                                 </div>
-                                <div class="fix practice-left-top-right-img">
+                          <!--       <div class="fix practice-left-top-right-img">
                                     <img src="img/practice-top-2.jpg" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <div class="fix practice-left-middle-text">
                                 <h3>General Information</h3>
@@ -203,13 +203,13 @@
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="Accident">
-                            <div class=" practice-left-top-img">
-                                <div class=" practice-left-top-left-img">
-                                    <img src="img/practice-top-1.jpg" alt="">
+                            <div class="practice-left-top-img">
+                                <div class="products-full-width">
+                                    <img src="img/products/epoxy2.png" alt="">
                                 </div>
-                                <div class=" practice-left-top-right-img">
+                                <!-- <div class=" practice-left-top-right-img">
                                     <img src="img/practice-top-2.jpg" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <div class=" practice-left-middle-text">
                                 <div class="fix practice-left-middle-text">
@@ -349,9 +349,9 @@
                             <div class=" practice-left-middle-text">
                                 <div class="fix practice-left-middle-text">
                                     <h3>General Information</h3>
-                                    <p>Polyurethane series powder coating is mainly made by carboxyl polyester resin. This type of powder coatings provide excellent levelling property, chemical resistance, weathering resistance and outstanding oil resistance. Polyurethane powder coatings are designed for any metal products that require high standard of chemical resistance, oil resistance and weathering resistance functional use on products for cars, motorcycles, oiling machine, and agricultural machine etc.</p>
+                                    <p>Art Style series powder coatings include Hybrids, Pure-Polyester and other types of powder coatings made by different resin, this type of powder coatings provide decorative fine arts surface looking for your metal products.  It can be applied to both indoor and outdoor situations. Our Art Style powder coatings also provide a distinctive and attractive appearance which can cover up some defects from the base metal material.</p>
                                     <h3>Products Series</h3>
-                                    <p>Polyurethane powder coatings have limitations on color selection but verities on glosses. We can make high gloss (above 80%), semi-gloss (50 – 80%), matt black (20 – 50%) and flat black (below 20%) according to customer’s needs.</p>
+                                    <p>Art Style powder coatings provide a huge selection for surface looking, including sand texture, hammer tone, silk texture, marbling texture, and river texture. Gloss rate can be adjusted according to customer’s need.</p>
                                 </div>
                                 <div class="fix practice-left-bottom-text">
                                     <div class="fix practice-bottom-left-img">
@@ -360,23 +360,23 @@
                                     <div class="fix practice-bottom-right-text">
                                         <h3>Physical Properties</h3>
                                         <p>
-                                            Specific gravity: 1.4 – 1.7 g/cm&sup3 <br>
+                                            Specific gravity: 1.2 – 1.8 g/cm&sup3 <br>
                                             Grain fineness distribution: 100% smaller than 100um (can be adjusted accordingly)
                                         </p>
                                         <h3>Curing Condition</h3>
                                         <p>
-                                            Standard: 190&degC (work piece temperature), 15min
+                                            Varies depending on the resin type for the products. For details, please refer to brief product descriptions. 
                                         </p>
                                         <h3>Average Coverage</h3>
                                         <p>
-                                            9-12 m&sup2/kg @ film thickness 60um (2.36mil) <br>
+                                            7-10 m&sup2/kg @ film thickness 80um (3.15mil) <br>
                                             Note: Number is calculated under 100% usage rate. 
                                         </p>
                                     </div>
                                 </div>
                                 <div class="fix right-content-contact-box">
                                     <h4>Test Performance</h3>
-                                    <img src="img/products/polyurethane.png">
+                                    <img src="img/products/art-style.png">
                                 </div>
                             </div>
                         </div>
@@ -390,21 +390,37 @@
                                 </div>
                             </div>
                             <div class=" practice-left-middle-text">
-                                <h2>business Law</h2>
-                                <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.<br/><br/>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
-                            </div>
-                            <div class=" practice-left-bottom-text">
-                                <div class=" practice-bottom-left-img">
-                                    <img src="img/practice-left-bottom.jpg" alt="">
+                                <div class="fix practice-left-middle-text">
+                                    <h3>General Information</h3>
+                                    <p>High Temperature Resistance powder coatings are made by special resin which has heat resistance property. This type of powder coating has excellent high temperature resistance, very good corrosion resistance, and excellent color stability. High Temperature Resistance powder coatings are designed for coating smoking exhaust pipeline, barbecue, and heat exchanger etc.</p>
+                                    <h3>Products Series</h3>
+                                    <p>High Temperature Resistance powder coatings provide thermo-stabilization for 230&degC x 6hrs, 250&degC x 3hrs, 300&degC x 2hrs, and 350&degC x 1hr, specific temperature can be adjusted according to customer’s requirement.</p>
                                 </div>
-                                <div class=" practice-bottom-right-text">
-                                    <h3>Duis aute irure dolor in reprehenderit in voluptate</h3>
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.<br/><br/>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
+                                <div class="fix practice-left-bottom-text">
+                                    <div class="fix practice-bottom-left-img">
+                                        <img src="img/practice-left-bottom.jpg" alt="">
+                                    </div>
+                                    <div class="fix practice-bottom-right-text">
+                                        <h3>Physical Properties</h3>
+                                        <p>
+                                            Specific gravity: 1.4 – 1.6 g/cm&sup3 <br>
+                                            Grain fineness distribution: 100% smaller than 100um (can be adjusted accordingly)
+                                        </p>
+                                        <h3>Curing Condition</h3>
+                                        <p>
+                                            Standard: 200&degC (work piece temperature), 15min
+                                        </p>
+                                        <h3>Average Coverage</h3>
+                                        <p>
+                                            9-12 m&sup2/kg @ film thickness 60um (2.36mil) <br>
+                                            Note: Number is calculated under 100% usage rate. 
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class=" right-content-contact-box">
-                                <h1>All people are equal before the law. A good attorney.</h1>
-                                <a href="">Contact us</a>
+                                <div class="fix right-content-contact-box">
+                                    <h4>Test Performance</h3>
+                                    <img src="img/products/high-t.png">
+                                </div>
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="divorce">
@@ -417,49 +433,38 @@
                                 </div>
                             </div>
                             <div class=" practice-left-middle-text">
-                                <h2>divorce Law</h2>
-                                <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.<br/><br/>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
-                            </div>
-                            <div class=" practice-left-bottom-text">
-                                <div class=" practice-bottom-left-img">
-                                    <img src="img/practice-left-bottom.jpg" alt="">
+                                <div class="fix practice-left-middle-text">
+                                    <h3>General Information</h3>
+                                    <p>Antimicrobial powder coatings are made of inorganic antimicrobial functional material which is harmless to human body. This series of powder coatings have excellent antimicrobial, reliability, safety, and long residual action. Our Antimicrobial Powder Coatings have the same coating properties and spraying process as the normal powder coatings. According to total number of bacteria test results, our Antimicrobial Powder Coatings inhibit a broad types of strain effectively. For example, Sarcina Lutea, Bacillus Subtilis, Staphylococcus Aureus, Colon Bacillus, Aspergillus Flavus, and Penicillium Citrinum etc.</p>
+                                    <h3>Products Series</h3>
+                                    <p>Antimicrobial powder coatings should be applied to household appliances, steel made furniture, kitchen supplies, medical apparatus, office supplies and outdoor recreation facilities etc.</p>
                                 </div>
-                                <div class=" practice-bottom-right-text">
-                                    <h3>Duis aute irure dolor in reprehenderit in voluptate</h3>
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.<br/><br/>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
+                                <div class="fix practice-left-bottom-text">
+                                    <div class="fix practice-bottom-left-img">
+                                        <img src="img/practice-left-bottom.jpg" alt="">
+                                    </div>
+                                    <div class="fix practice-bottom-right-text">
+                                        <!-- <h3>Physical Properties</h3>
+                                        <p>
+                                            Specific gravity: 1.4 – 1.6 g/cm&sup3 <br>
+                                            Grain fineness distribution: 100% smaller than 100um (can be adjusted accordingly)
+                                        </p> -->
+                                        <h3>Curing Condition</h3>
+                                        <p>
+                                            Varies depending on the resin type for the products. For details, please refer to brief product descriptions.
+                                        </p>
+                                        <!-- <h3>Average Coverage</h3>
+                                        <p>
+                                            9-12 m&sup2/kg @ film thickness 60um (2.36mil) <br>
+                                            Note: Number is calculated under 100% usage rate. 
+                                        </p> -->
+                                    </div>
                                 </div>
-                            </div>
-                            <div class=" right-content-contact-box">
-                                <h1>All people are equal before the law. A good attorney.</h1>
-                                <a href="">Contact us</a>
-                            </div>
-                        </div>
-                    	<div class="practice-left-content tab-pane fade" id="insurance">
-                        	<div class=" practice-left-top-img">
-                            	<div class=" practice-left-top-left-img">
-                                	<img src="img/practice-top-1.jpg" alt="">
-                                </div>
-                                <div class=" practice-left-top-right-img">
-                                	<img src="img/practice-top-2.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class=" practice-left-middle-text">
-                            	<h2>insurance Law</h2>
-                                <p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.<br/><br/>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
-                            </div>
-                            <div class=" practice-left-bottom-text">
-                            	<div class=" practice-bottom-left-img">
-                                	<img src="img/practice-left-bottom.jpg" alt="">
-                                </div>
-                                <div class=" practice-bottom-right-text">
-                                	<h3>Duis aute irure dolor in reprehenderit in voluptate</h3>
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.<br/><br/>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</p>
+                                <div class="fix right-content-contact-box">
+                                    <h4>Test Performance</h3>
+                                    <img src="img/products/anti.png">
                                 </div>
                             </div>
-                            <div class=" right-content-contact-box">
-                        		<h1>All people are equal before the law. A good attorney.</h1>
-                            	<a href="">Contact us</a>
-                        	</div>
                         </div>
                     </div>
                 </div>
