products bg image

--- a/public/products.html
+++ b/public/products.html
@@ -251,14 +251,19 @@
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="Property">
-                            <div class=" practice-left-top-img">
+                            <div class="practice-left-top-img">
+                                <div class="products-full-width">
+                                    <img src="img/products/test.png" alt="">
+                                </div>
+                            </div>
+                            <!-- <div class=" practice-left-top-img">
                                 <div class=" practice-left-top-left-img">
                                     <img src="img/practice-top-1.jpg" alt="">
                                 </div>
                                 <div class=" practice-left-top-right-img">
                                     <img src="img/practice-top-2.jpg" alt="">
                                 </div>
-                            </div>
+                            </div> -->
                             <div class=" practice-left-middle-text">
                                 <div class="fix practice-left-middle-text">
                                     <h3>General Information</h3>
