--- a/public/products.html
+++ b/public/products.html
@@ -161,13 +161,10 @@
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 tab-content">
                         <div class="practice-left-content tab-pane fade in active" id="Criminal">
-                            <div class="fix practice-left-top-img">
+                            <div class="practice-left-top-img">
                                 <div class="products-full-width">
-                                    <img src="img/products/polyester2.png" alt="">
+                                    <img src="img/products/polyester2.png" alt="" style="width: 70%;">
                                 </div>
-                          <!--       <div class="fix practice-left-top-right-img">
-                                    <img src="img/practice-top-2.jpg" alt="">
-                                </div> -->
                             </div>
                             <div class="fix practice-left-middle-text">
                                 <h3>General Information</h3>
@@ -205,7 +202,7 @@
                         <div class="practice-left-content tab-pane fade" id="Accident">
                             <div class="practice-left-top-img">
                                 <div class="products-full-width">
-                                    <img src="img/products/epoxy2.png" alt="">
+                                    <img src="img/products/epoxy2.png" alt="" style="width: 50%;">
                                 </div>
                                 <!-- <div class=" practice-left-top-right-img">
                                     <img src="img/practice-top-2.jpg" alt="">
@@ -253,7 +250,7 @@
                         <div class="practice-left-content tab-pane fade" id="Property">
                             <div class="practice-left-top-img">
                                 <div class="products-full-width">
-                                    <img src="img/products/test.png" alt="">
+                                    <img src="img/products/p-e2.png" alt="" style="width: 50%;">
                                 </div>
                             </div>
                             <!-- <div class=" practice-left-top-img">
@@ -300,14 +297,19 @@
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="employment">
-                            <div class=" practice-left-top-img">
+                            <div class="practice-left-top-img">
+                                <div class="products-full-width">
+                                    <img src="img/products/poly2.png" alt="" style="width: 50%;">
+                                </div>
+                            </div>
+                            <!-- <div class=" practice-left-top-img">
                                 <div class=" practice-left-top-left-img">
                                     <img src="img/practice-top-1.jpg" alt="">
                                 </div>
                                 <div class=" practice-left-top-right-img">
                                     <img src="img/practice-top-2.jpg" alt="">
                                 </div>
-                            </div>
+                            </div> -->
                             <div class=" practice-left-middle-text">
                                 <div class="fix practice-left-middle-text">
                                     <h3>General Information</h3>
@@ -343,14 +345,19 @@
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="family">
-                            <div class=" practice-left-top-img">
+                            <div class="practice-left-top-img">
+                                <div class="products-full-width">
+                                    <img src="img/products/art2.png" alt="" style="width: 50%;">
+                                </div>
+                            </div>
+                            <!-- <div class=" practice-left-top-img">
                                 <div class=" practice-left-top-left-img">
                                     <img src="img/practice-top-1.jpg" alt="">
                                 </div>
                                 <div class=" practice-left-top-right-img">
                                     <img src="img/practice-top-2.jpg" alt="">
                                 </div>
-                            </div>
+                            </div> -->
                             <div class=" practice-left-middle-text">
                                 <div class="fix practice-left-middle-text">
                                     <h3>General Information</h3>
@@ -386,14 +393,19 @@
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="business">
-                            <div class=" practice-left-top-img">
+                            <div class="practice-left-top-img">
+                                <div class="products-full-width">
+                                    <img src="img/products/high2.png" alt="" style="width: 50%;">
+                                </div>
+                            </div>
+                            <!-- <div class=" practice-left-top-img">
                                 <div class=" practice-left-top-left-img">
                                     <img src="img/practice-top-1.jpg" alt="">
                                 </div>
                                 <div class=" practice-left-top-right-img">
                                     <img src="img/practice-top-2.jpg" alt="">
                                 </div>
-                            </div>
+                            </div> -->
                             <div class=" practice-left-middle-text">
                                 <div class="fix practice-left-middle-text">
                                     <h3>General Information</h3>
@@ -429,14 +441,19 @@
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="divorce">
-                            <div class=" practice-left-top-img">
+                            <div class="practice-left-top-img">
+                                <div class="products-full-width">
+                                    <img src="img/products/anti2.png" alt="" style="width: 50%; max-height: 450px;">
+                                </div>
+                            </div>
+                            <!-- <div class=" practice-left-top-img">
                                 <div class=" practice-left-top-left-img">
                                     <img src="img/practice-top-1.jpg" alt="">
                                 </div>
                                 <div class=" practice-left-top-right-img">
                                     <img src="img/practice-top-2.jpg" alt="">
                                 </div>
-                            </div>
+                            </div> -->
                             <div class=" practice-left-middle-text">
                                 <div class="fix practice-left-middle-text">
                                     <h3>General Information</h3>
