fix products img bug

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
                                     <li><a href="products.html#polyurethane">Polyurethane</a></li>
                                     <li><a href="products.html#art-style">Art Style</a></li>
                                     <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
-                                    <li><a href="products.html#antimicrobial-coating">Antimicrobial</a></li>
+                                    <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
