--- a/public/products.html
+++ b/public/products.html
@@ -48,7 +48,7 @@
                                     <li><a href="products.html#polyurethane">Polyurethane</a></li>
                                     <li><a href="products.html#art-style">Art Style</a></li>
                                     <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
-                                    <li><a href="products.html#antimicrobial-coating">Antimicrobial</a></li>
+                                    <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -163,7 +163,7 @@
                         <div class="practice-left-content tab-pane fade in active" id="Criminal">
                             <div class="practice-left-top-img">
                                 <div class="products-full-width">
-                                    <img src="img/products/polyester2.png" alt="" style="width: 70%;">
+                                    <img src="img/products/polyester2.png" alt="" style="width: 50%;">
                                 </div>
                             </div>
                             <div class="fix practice-left-middle-text">
