about us update

--- a/public/about.html
+++ b/public/about.html
@@ -36,40 +36,30 @@
                 <nav class="mainmenu pull-right">
                     <div class="nav-holder">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About us</a></li>
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="about.html">ABOUT US</a></li>
                             <li class="dropdown">
-                                <a href="attorney-v1.html">Attorney</a>
+                                <a href="products.html#polyester">PRODUCTS</a>
                                 <ul class="submenu">
-                                    <li class="dropdown">
-                                        <a href="attorney-v2.html">Attorney Two</a>
-                                        <ul class="submenu">
-                                            <li><a href="attorney-v2.html">Third Level Menu</a></li>
-                                            <li><a href="single-attorney.html">Third Level Menu</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="single-attorney.html">Attorney Profile</a></li>
+                                    <li><a href="products.html#polyester">Polyester</a></li>
+                                    <li><a href="products.html#epoxies">Epoxies</a></li>
+                                    <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
+                                    <li><a href="products.html#polyurethane">Polyurethane</a></li>
+                                    <li><a href="products.html#art-style">Art Style</a></li>
+                                    <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
+                                    <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="practice-v1.html">Practice Areas</a>
+                                <a href="blog-left-sidebar.html">COLOR</a>
                                 <ul class="submenu">
-                                    <li><a href="practice-v2.html">Practice Two</a></li>
-                                    <li><a href="practice-v3.html">Practice Three</a></li>
-                                    <li><a href="practice-v4.html">Practice Four</a></li>
-                                    <li><a href="practice-v5.html">Practice Five</a></li>
+                                    <li><a href="blog-right-sidebar.html">Color Two</a></li>
+                                    <li><a href="blog-v3.html">Color Three</a></li>
+                                    <li><a href="blog-v4.html">Color Four</a></li>
+                                    <li><a href="blog-details.html">Color Details</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown">
-                                <a href="blog-left-sidebar.html">blog</a>
-                                <ul class="submenu">
-                                    <li><a href="blog-right-sidebar.html">Blog Two</a></li>
-                                    <li><a href="blog-v3.html">Blog Three</a></li>
-                                    <li><a href="blog-v4.html">Blog Four</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="contact.html">contact us</a></li>
+                            <li><a href="contact.html">CONTACT US</a></li>
                         </ul>
                     </div>
                     <div class="nav-expander">
@@ -123,9 +113,24 @@
                         		<!-- <span>Working Since 1989</span> -->
                         		<h2><span>Our Mission and vision</span></h2>
                     		</div>
-                            <p>Beyond Powder Coatings Ltd is a professional powder coating company who dedicates our superior performance powder coatings and high quality service to World coating markets. We had gained fully support from a Chinese Powder Coating Manufacture Company (LY PONT) who is currently recognized as one of the most technical and professional powder coating manufacture in China. Our manufacture had reached out yearly production at 15000 tons of powder coating in 2014 and we are continuously growing. We are proud of having a technical and professional production team as well as a high efficiency management team to help us manufacture powder coatings. We will take seeking continuously, working energetically, honesty and trustworthiness as Beyond Powder Coatings Ltd. sense of value to make us famous of the world. </p>
-                            
-                            <div class="mission-vision-signature">
+                            <p>
+                            Beyond Powder Coatings Ltd is a professional powder coating company who dedicates our superior performance powder coatings and high quality service to World coating markets. We had gained fully support from a Chinese Powder Coating Manufacture Company (LY PONT) who is currently recognized as one of the most technical and professional powder coating manufacture in China. 
+                            </p>
+                            <p>
+                                What we can offer to our customers
+                            </p>
+                            <ul>
+                                <li>Quality assurance powder coatings.</li> 
+                                <li>Fast shipments and delivery.</li>
+                                <li>Over 150 in-stock powder coating colors.</li>
+                                <li>Able to help any size of the orders.</li>
+                                <li>Excellent customer service.</li>
+
+                            </ul>
+                            <p>
+                            Our manufacture had reached out yearly production at 15000 tons of powder coating in 2014 and we are continuously growing. We are proud of having a technical and professional production team as well as a high efficiency management team to help us manufacture powder coatings. We will take seeking continuously, working energetically, honesty and trustworthiness as Beyond Powder Coatings Ltd. sense of value to make us famous of the world. 
+                            </p>
+                            .<div class="mission-vision-signature">
                             	<img src="img/mission-vision-signature.jpg" alt="">
                             </div>
                         </div>
